Today 3:30-5:50PM Finished up a lot of event system code
Mostly working

--- a/UI/makefile
+++ b/UI/makefile
@@ -10,11 +10,17 @@ endif
 
 all: UIApplication clean
 
-UIApplication: UIApplication.o CGClasses.o CommonGLFunctions.o TabBarController.o ViewController.o TabBarViewController.o View.o BarItem.o 
-	g++ $(OPTS) -o UIApplication UIApplication.o CGClasses.o CommonGLFunctions.o TabBarController.o ViewController.o TabBarViewController.o View.o BarItem.o $(LIBS)
+UIApplication: UIApplication.o EventDispatcher.o Event.o CGClasses.o CommonGLFunctions.o TabBarController.o ViewController.o TabBarViewController.o View.o BarItem.o 
+	g++ $(OPTS) -o UIApplication UIApplication.o EventDispatcher.o Event.o CGClasses.o CommonGLFunctions.o TabBarController.o ViewController.o TabBarViewController.o View.o BarItem.o $(LIBS)
 
 UIApplication.o: TabBarController.h UIApplication.cpp
 	g++ $(OPTS) $(MACOSX_DEFINE) -c UIApplication.cpp
+
+EventDispatcher.o: Event.h View.h EventDispatcher.h EventDispatcher.cpp
+	g++ $(OPTS) -c EventDispatcher.h EventDispatcher.cpp
+
+Event.o: CGClasses.h Event.h Event.cpp
+	g++ $(OPTS) -c Event.h Event.cpp
 
 BarItem.o: View.h BarItem.h BarItem.cpp
 	g++ $(OPTS) -c BarItem.h BarItem.cpp
