Added interfacing between crawler and ui

--- a/UI/makefile
+++ b/UI/makefile
@@ -4,14 +4,26 @@ ARCH := $(shell uname)
 ifeq ($(ARCH), Linux)
 else
  MACOSX_DEFINE = -DMACOSX -I/sw/include
- LIBS = -I/usr/common/include -I/usr/include/GL -L/System/Library/Frameworks/OpenGL.framework/Libraries -framework GLUT -framework OpenGL -lGL -lm -lobjc -lstdc++
+ LIBS = -I/usr/include -I/usr/include/GL -L/usr/lib -L/System/Library/Frameworks/OpenGL.framework/Libraries -framework GLUT -framework OpenGL -lGL -lm -lobjc -lstdc++ -lcurl
 
 endif
 
 all: clean UIApplication
 
-UIApplication: UIApplication.o EventDispatcher.o Event.o CGClasses.o CommonGLFunctions.o TabBarController.o ViewController.o TabBarViewController.o View.o BarItem.o TextRenderView.o TextInputView.o TitledTextInputView.o ToggleButton.o TitledToggleButton.o GlobalState.o SetupViewController.o Button.o ScrollBar.o ScrollView.o DynamicTextInputView.o TextInputScrollView.o SearchViewController.o StatusViewController.o
-	g++ $(OPTS) -o UIApplication UIApplication.o EventDispatcher.o Event.o CGClasses.o CommonGLFunctions.o TabBarController.o ViewController.o TabBarViewController.o View.o BarItem.o TextRenderView.o TextInputView.o TitledTextInputView.o ToggleButton.o TitledToggleButton.o GlobalState.o SetupViewController.o Button.o ScrollBar.o ScrollView.o DynamicTextInputView.o TextInputScrollView.o SearchViewController.o StatusViewController.o $(LIBS)
+UIApplication: UIApplication.o EventDispatcher.o Event.o CGClasses.o CommonGLFunctions.o TabBarController.o ViewController.o TabBarViewController.o View.o BarItem.o TextRenderView.o TextInputView.o TitledTextInputView.o ToggleButton.o TitledToggleButton.o GlobalState.o SetupViewController.o Button.o ScrollBar.o ScrollView.o DynamicTextInputView.o TextInputScrollView.o SearchViewController.o StatusViewController.o QueueNode.o Parser.o Crawler.o CrawlerRawOutputView.o TextScrollView.o
+	g++ $(OPTS) -o UIApplication UIApplication.o EventDispatcher.o Event.o CGClasses.o CommonGLFunctions.o TabBarController.o ViewController.o TabBarViewController.o View.o BarItem.o TextRenderView.o TextInputView.o TitledTextInputView.o ToggleButton.o TitledToggleButton.o GlobalState.o SetupViewController.o Button.o ScrollBar.o ScrollView.o DynamicTextInputView.o TextInputScrollView.o SearchViewController.o StatusViewController.o QueueNode.o Parser.o Crawler.o CrawlerRawOutputView.o TextScrollView.o $(LIBS)
+
+QueueNode.o: ../core/QueueNode.h ../core/queuenode.cpp
+	g++ $(OPTS) -c ../core/QueueNode.h ../core/queuenode.cpp
+
+Parser.o: ../core/Parser.h ../core/parser.cpp
+	g++ $(OPTS) -c ../core/Parser.h ../core/parser.cpp
+
+Crawler.o: ../core/Crawler.h ../core/crawler.cpp
+	g++ $(OPTS) -c ../core/Crawler.h ../core/crawler.cpp
+
+CrawlerRawOutputView.o: CrawlerRawOutputView.h CrawlerRawOutputView.cpp
+	g++ $(OPTS) -c CrawlerRawOutputView.h CrawlerRawOutputView.cpp
 
 UIApplication.o:  GlobalState.h TabBarController.h EventDispatcher.h TextInputView.h TitledTextInputView.h ToggleButton.h TitledToggleButton.h SetupViewController.h UIApplication.cpp
 	g++ $(OPTS) $(MACOSX_DEFINE) -c UIApplication.cpp
@@ -24,6 +36,9 @@ Event.o: CGClasses.h Event.h Event.cpp
 
 GlobalState.o: GlobalState.h
 	g++ $(OPTS) -c GlobalState.h GlobalState.cpp
+
+TextScrollView.o: TextScrollView.h TextScrollView.cpp
+	g++ $(OPTS) -c TextScrollView.h TextScrollView.cpp
 
 TextInputScrollView.o: ScrollView.h TextInputScrollView.h TextInputScrollView.cpp
 	g++ $(OPTS) -c TextInputScrollView.h TextInputScrollView.cpp
